# fracessa

./: .cursorignore  .gitignore  .gitmodules  aistudio_analysis.md  benchmark_superset_removal  benchmark_superset_removal.cpp  bitset_table.md  bitset_table_n6.md  callgrind.out.matrix27  callgrind.out.matrix31  generate_kcachegrind.sh  user_messages.txt
.cursor/plans/: optimize_smallest_representation_with_early_exit_a968fdd6.plan.md
.github/workflows/: release.yml
callgrind_reports/: callgrind.35  callgrind.out.25  callgrind.out.26  callgrind.out.27  callgrind.out.28  callgrind.out.29  callgrind.out.30  callgrind.out.31  callgrind.out.32  callgrind.out.33  callgrind.out.35  callgrind.out.6
fracessa/: .gitignore  CMakeLists.txt  CODE_ANALYSIS.md  COPOSITIVITY_ANALYSIS.md  DETAILED_COPOSITIVITY_TRACE.md  FINAL_COPOSITIVITY_ANALYSIS.md  POSDEF_TEST_RESULTS.md  README.md  UNUSED_BITSET64_FUNCTIONS.md
fracessa/include/eigen_extensions/: bareiss_gauss.hpp  bareiss_lu.hpp  copositivity.hpp  fft.hpp  rational_adjugate.hpp  rational_eigen.hpp
fracessa/include/fracessa/: Candidate.hpp  EssFinder.hpp  Helper.hpp  Matrix.hpp  Ref.hpp  bitset64.hpp  candidate.hpp  eigen_extensions.hpp  ess_finder.hpp  fracessa.hpp  fracessa_v2.hpp  helper.hpp  logger.hpp  matrix.hpp  matrix_new.hpp  matrix_old.hpp  rational.hpp  rational_eigen.hpp  ref.hpp  supports.hpp  types.hpp
fracessa/include/rational_linalg/: adjugate.hpp  bareiss_gauss.hpp  copositivity.hpp  linear_solver.hpp  matrix.hpp  matrix_ops.hpp  types_rational.hpp
fracessa/include/zzz_old/: bareiss_gauss.hpp  supports_backup.hpp  supports_v2.hpp
fracessa/include/zzz_old/eigen_extensions/: bareiss_ldlt.hpp  rational_eigen.hpp
fracessa/src/: EssFinder.cpp  Ref.cpp  another_test.cpp  checkstab.cpp  checkstab_v2.cpp  ess_finder.cpp  findeq.cpp  findeq_v2.cpp  fracessa.cpp  fracessa_v2.cpp  logger.cpp  main.cpp  ref.cpp  test_copositivity.cpp  test_eigen_llt.cpp  test_posdef.cpp
fracessa/src/zzz_old/: checkstab.cpp  checkstab_old.cpp  findeq.cpp
gprof_reports/: SUMMARY.md  gmon.27  gmon.28  gmon.29  gmon.30  gmon.31  gmon.32  gmon.33  gmon.35  report_27.txt  report_28.txt  report_29.txt  report_30.txt  report_31.txt  report_32.txt  report_33.txt  report_35.txt
python/: fracessa_py.py  gmon.out  run_matrices.py  test_against_old_builds.py
python/results/: fracessa_verification_candidates_20251204_135938.csv  fracessa_verification_candidates_20251204_140017.csv  fracessa_verification_candidates_20251204_140217.csv  fracessa_verification_candidates_20251206_015042.csv  fracessa_verification_candidates_20251206_052944.csv  fracessa_verification_candidates_20251206_164840.csv  fracessa_verification_candidates_20251206_174441.csv  fracessa_verification_candidates_20251207_065058.csv  fracessa_verification_candidates_20251207_151436.csv  fracessa_verification_result_20251204_135339.json  fracessa_verification_result_20251204_135938.json  fracessa_verification_result_20251204_140017.json  fracessa_verification_result_20251204_140154.json  fracessa_verification_result_20251204_140217.json  fracessa_verification_result_20251204_145531.json  fracessa_verification_result_20251204_150231.json  fracessa_verification_result_20251204_151802.json  fracessa_verification_result_20251204_152810.json  fracessa_verification_result_20251204_152850.json  fracessa_verification_result_20251204_165753.json  fracessa_verification_result_20251204_170025.json  fracessa_verification_result_20251204_171759.json  fracessa_verification_result_20251205_055108.json  fracessa_verification_result_20251205_131935.json  fracessa_verification_result_20251205_212708.json  fracessa_verification_result_20251205_213252.json  fracessa_verification_result_20251205_213703.json  fracessa_verification_result_20251205_214020.json  fracessa_verification_result_20251205_214952.json  fracessa_verification_result_20251205_215306.json  fracessa_verification_result_20251205_215703.json  fracessa_verification_result_20251205_215939.json  fracessa_verification_result_20251206_010426.json  fracessa_verification_result_20251206_010950.json  fracessa_verification_result_20251206_011945.json  fracessa_verification_result_20251206_015042.json  fracessa_verification_result_20251206_020715.json  fracessa_verification_result_20251206_020812.json  fracessa_verification_result_20251206_021234.json  fracessa_verification_result_20251206_022121.json  (+68 more)
python/test/: create_baselines.py  fracessa_verification_result_baseline.json  verification_matrices.json
python/verification/: create_baselines.py  verification_matrices.json
python/verification/the_old_exe/: essfinder_log.txt
tests/: benchmark_superset_removal  benchmark_superset_removal.cpp  bitset_perf_test  bitset_perf_test.cpp  run_all_matrices.sh
zzz_old/: copos_alternative.txt  testmatrizenfuerref_werner.txt
